players market value prediction + genetic_algorithm

--- a/pca_clustering.ipynb
+++ b/pca_clustering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"stats.csv\", encoding=\"ISO-8859-1\", delimiter=\";\")"
+    "df = pd.read_csv(\"data/player_stats.csv\", encoding=\"ISO-8859-1\", delimiter=\";\")"
    ]
   },
   {
@@ -1684,6 +1684,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('float_format', '{:f}'.format)\n",
+    "df.describe().T"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2521,6 +2540,7 @@
     }
    ],
    "source": [
+    "%%capture\n",
     "k_means = KMeans(n_clusters = 5, init = \"k-means++\", random_state = 42)\n",
     "k_means.fit(scores_pca)"
    ]
