update readme + add htmls

--- a/genetic_algorithm.ipynb
+++ b/genetic_algorithm.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Carga de bibliotecas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,6 +18,13 @@
     "\n",
     "from sklearn import preprocessing\n",
     "from genetic_utils import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Carga de datos"
    ]
   },
   {
@@ -26,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Current value prediction"
+    "## Limpieza de datos"
    ]
   },
   {
@@ -197,6 +211,13 @@
    ],
    "source": [
     "df_bis.describe().T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Coherencia de los datos con los utilizados para el entrenamiento"
    ]
   },
   {
@@ -422,6 +443,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predicciones"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -447,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Genetic algorithm"
+    "## Algoritmo genético"
    ]
   },
   {
@@ -468,23 +496,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1th generation | average score : -0.0124\n",
-      "2th generation | average score : -0.0058\n",
-      "3th generation | average score : -0.0015\n",
-      "4th generation | average score : 0.0017\n",
-      "5th generation | average score : 0.0054\n",
-      "6th generation | average score : 0.0104\n",
-      "7th generation | average score : 0.0150\n",
-      "8th generation | average score : 0.0183\n",
-      "9th generation | average score : 0.0225\n",
-      "10th generation | average score : 0.0276\n"
+      "1th generation | average score : -0.0091\n",
+      "2th generation | average score : -0.0005\n",
+      "3th generation | average score : 0.0051\n",
+      "4th generation | average score : 0.0109\n",
+      "5th generation | average score : 0.0173\n",
+      "6th generation | average score : 0.0239\n",
+      "7th generation | average score : 0.0306\n",
+      "8th generation | average score : 0.0370\n",
+      "9th generation | average score : 0.0446\n",
+      "10th generation | average score : 0.0525\n"
      ]
     }
    ],
@@ -494,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -519,99 +547,159 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Player</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>MP</th>\n",
        "      <th>Goals</th>\n",
        "      <th>Assists</th>\n",
-       "      <th>current_value</th>\n",
+       "      <th>CrdY</th>\n",
+       "      <th>2CrdY</th>\n",
+       "      <th>CrdR</th>\n",
+       "      <th>Min</th>\n",
        "      <th>Pos</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>698</th>\n",
-       "      <td>Yehvann Diouf</td>\n",
+       "      <th>1322</th>\n",
+       "      <td>Tomá Koubek</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.037106</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>360</td>\n",
        "      <td>GK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2293</th>\n",
-       "      <td>Leo Skiri Østigård</td>\n",
+       "      <th>2210</th>\n",
+       "      <td>Malang Sarr</td>\n",
+       "      <td>24</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.015973</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>356</td>\n",
        "      <td>DF</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1391</th>\n",
-       "      <td>Darko Lazovi?</td>\n",
+       "      <th>1919</th>\n",
+       "      <td>Alfonso Pedraza</td>\n",
+       "      <td>26</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>836</td>\n",
+       "      <td>DF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2064</th>\n",
+       "      <td>Karim Rekik</td>\n",
+       "      <td>28</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>664</td>\n",
+       "      <td>DF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>583</th>\n",
+       "      <td>Colin Dagba</td>\n",
+       "      <td>24</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>560</td>\n",
+       "      <td>DF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>827</th>\n",
+       "      <td>Jacopo Fazzini</td>\n",
+       "      <td>19</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>245</td>\n",
+       "      <td>MF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>Cédric Bakambu</td>\n",
+       "      <td>31</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.43</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>MF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2538</th>\n",
+       "      <td>Mikel Vesga</td>\n",
+       "      <td>29</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
        "      <td>0.12</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>0.065086</td>\n",
-       "      <td>DF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1662</th>\n",
-       "      <td>Éder Militão</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.051583</td>\n",
-       "      <td>DF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>445</th>\n",
-       "      <td>Dani Carvajal</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.021675</td>\n",
-       "      <td>DF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>Charles Aránguiz</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.016463</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1485</td>\n",
        "      <td>MF</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1414</th>\n",
-       "      <td>Mario Lemina</td>\n",
+       "      <th>1188</th>\n",
+       "      <td>Daniel James</td>\n",
+       "      <td>25</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.026412</td>\n",
-       "      <td>MF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1414</th>\n",
-       "      <td>Mario Lemina</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.026412</td>\n",
-       "      <td>MF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048</th>\n",
-       "      <td>Gorka Guruzeta</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.049013</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>198</td>\n",
        "      <td>FW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1224</th>\n",
-       "      <td>Luka Jovi?</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.043044</td>\n",
+       "      <th>1057</th>\n",
+       "      <td>Erling Haaland</td>\n",
+       "      <td>22</td>\n",
+       "      <td>20</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1636</td>\n",
        "      <td>FW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>458</th>\n",
-       "      <td>Samu Castillejo</td>\n",
-       "      <td>0.12</td>\n",
+       "      <th>816</th>\n",
+       "      <td>Romain Faivre</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.043199</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>118</td>\n",
        "      <td>FW</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -619,28 +707,27 @@
        "</div>"
       ],
       "text/plain": [
-       "                  Player  Goals  Assists  current_value Pos\n",
-       "698        Yehvann Diouf   0.00     0.00       0.037106  GK\n",
-       "2293  Leo Skiri Østigård   0.00     0.00       0.015973  DF\n",
-       "1391       Darko Lazovi?   0.12     0.20       0.065086  DF\n",
-       "1662        Éder Militão   0.12     0.00       0.051583  DF\n",
-       "445        Dani Carvajal   0.00     0.08       0.021675  DF\n",
-       "112     Charles Aránguiz   0.04     0.00       0.016463  MF\n",
-       "1414        Mario Lemina   0.00     0.00       0.026412  MF\n",
-       "1414        Mario Lemina   0.00     0.00       0.026412  MF\n",
-       "1048      Gorka Guruzeta   0.20     0.00       0.049013  FW\n",
-       "1224          Luka Jovi?   0.12     0.00       0.043044  FW\n",
-       "458      Samu Castillejo   0.12     0.00       0.043199  FW"
+       "               Player  Age  MP  Goals  Assists  CrdY  2CrdY  CrdR   Min Pos\n",
+       "1322     Tomá Koubek   30   4      0     0.00  0.00    0.0   0.0   360  GK\n",
+       "2210      Malang Sarr   24   9      0     0.00  0.50    0.0   0.0   356  DF\n",
+       "1919  Alfonso Pedraza   26  12      0     0.11  0.11    0.0   0.0   836  DF\n",
+       "2064      Karim Rekik   28  10      1     0.14  0.14    0.0   0.0   664  DF\n",
+       "583       Colin Dagba   24  12      0     0.00  0.16    0.0   0.0   560  DF\n",
+       "827    Jacopo Fazzini   19  11      0     0.00  0.74    0.0   0.0   245  MF\n",
+       "173    Cédric Bakambu   31   3      0     1.43  0.00    0.0   0.0    59  MF\n",
+       "2538      Mikel Vesga   29  20      2     0.12  0.18    0.0   0.0  1485  MF\n",
+       "1188     Daniel James   25   4      0     0.00  0.00    0.0   0.0   198  FW\n",
+       "1057   Erling Haaland   22  20     25     0.16  0.16    0.0   0.0  1636  FW\n",
+       "816     Romain Faivre   24   2      0     0.00  0.00    0.0   0.0   118  FW"
       ]
      },
+     "execution_count": 16,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "display(best)\n",
-    "\n",
-    "# to do : prevent player from being several times in the same individual"
+    "df.loc[best.index, [\"Player\"] + to_keep_for_value_prediction]"
    ]
   }
  ],
