--- a/genetic_algorithm.ipynb
+++ b/genetic_algorithm.ipynb
@@ -485,34 +485,36 @@
    "outputs": [],
    "source": [
     "# normalize so that all columns have \"the same weight\" in the objective function\n",
-    "to_normalize = [\"Goals\", \"current_value\"]\n",
-    "other_columns = [c for c in df.columns if c not in to_normalize]\n",
-    "x = df[to_normalize].values  # returns a numpy array\n",
+    "variables = list(WEIGHTS.values())\n",
+    "other_columns = [c for c in df.columns if c not in variables]\n",
+    "\n",
+    "x = df[variables].values\n",
     "min_max_scaler = preprocessing.MinMaxScaler()\n",
     "x_normalized = min_max_scaler.fit_transform(x)\n",
-    "df_normalized = pd.DataFrame(x_normalized, columns=to_normalize)\n",
+    "\n",
+    "df_normalized = pd.DataFrame(x_normalized, columns=variables)\n",
     "df_normalized = df[other_columns].join(df_normalized)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1th generation | average score : -0.0091\n",
-      "2th generation | average score : -0.0005\n",
-      "3th generation | average score : 0.0051\n",
-      "4th generation | average score : 0.0109\n",
-      "5th generation | average score : 0.0173\n",
-      "6th generation | average score : 0.0239\n",
-      "7th generation | average score : 0.0306\n",
-      "8th generation | average score : 0.0370\n",
-      "9th generation | average score : 0.0446\n",
-      "10th generation | average score : 0.0525\n"
+      "1th generation | average score : 0.0010\n",
+      "2th generation | average score : 0.0078\n",
+      "3th generation | average score : 0.0123\n",
+      "4th generation | average score : 0.0164\n",
+      "5th generation | average score : 0.0201\n",
+      "6th generation | average score : 0.0241\n",
+      "7th generation | average score : 0.0294\n",
+      "8th generation | average score : 0.0353\n",
+      "9th generation | average score : 0.0416\n",
+      "10th generation | average score : 0.0483\n"
      ]
     }
    ],
@@ -522,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -549,185 +551,162 @@
        "      <th>Player</th>\n",
        "      <th>Age</th>\n",
        "      <th>MP</th>\n",
-       "      <th>Goals</th>\n",
-       "      <th>Assists</th>\n",
-       "      <th>CrdY</th>\n",
-       "      <th>2CrdY</th>\n",
-       "      <th>CrdR</th>\n",
-       "      <th>Min</th>\n",
        "      <th>Pos</th>\n",
+       "      <th>Goals</th>\n",
+       "      <th>PasTotCmp</th>\n",
+       "      <th>Int</th>\n",
+       "      <th>current_value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1322</th>\n",
-       "      <td>Tomá Koubek</td>\n",
-       "      <td>30</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>360</td>\n",
-       "      <td>GK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2210</th>\n",
-       "      <td>Malang Sarr</td>\n",
-       "      <td>24</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>356</td>\n",
-       "      <td>DF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1919</th>\n",
-       "      <td>Alfonso Pedraza</td>\n",
-       "      <td>26</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>836</td>\n",
-       "      <td>DF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2064</th>\n",
-       "      <td>Karim Rekik</td>\n",
-       "      <td>28</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>664</td>\n",
-       "      <td>DF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>583</th>\n",
-       "      <td>Colin Dagba</td>\n",
-       "      <td>24</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>560</td>\n",
-       "      <td>DF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>827</th>\n",
-       "      <td>Jacopo Fazzini</td>\n",
-       "      <td>19</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.74</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>245</td>\n",
-       "      <td>MF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>Cédric Bakambu</td>\n",
+       "      <th>2254</th>\n",
+       "      <td>Luigi Sepe</td>\n",
        "      <td>31</td>\n",
-       "      <td>3</td>\n",
+       "      <td>15</td>\n",
+       "      <td>GK</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.43</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>24.9</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>59</td>\n",
-       "      <td>MF</td>\n",
+       "      <td>2,100,000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2538</th>\n",
-       "      <td>Mikel Vesga</td>\n",
-       "      <td>29</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1485</td>\n",
-       "      <td>MF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1188</th>\n",
-       "      <td>Daniel James</td>\n",
+       "      <th>1292</th>\n",
+       "      <td>Max Kilman</td>\n",
        "      <td>25</td>\n",
-       "      <td>4</td>\n",
+       "      <td>22</td>\n",
+       "      <td>DF</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>198</td>\n",
-       "      <td>FW</td>\n",
+       "      <td>47.8</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>14,046,333.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1057</th>\n",
-       "      <td>Erling Haaland</td>\n",
+       "      <th>1060</th>\n",
+       "      <td>Alexander Hack</td>\n",
+       "      <td>29</td>\n",
+       "      <td>16</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34.6</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1,958,333.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>Melvin Bard</td>\n",
        "      <td>22</td>\n",
        "      <td>20</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1636</td>\n",
-       "      <td>FW</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>4,394,166.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>816</th>\n",
-       "      <td>Romain Faivre</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2</td>\n",
+       "      <th>323</th>\n",
+       "      <td>Kenji-Van Boto</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>DF</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>118</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2,154,611.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>725</th>\n",
+       "      <td>Niklas Dorsch</td>\n",
+       "      <td>25</td>\n",
+       "      <td>4</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32.2</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>652,166.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1181</th>\n",
+       "      <td>Lee Jae-sung</td>\n",
+       "      <td>30</td>\n",
+       "      <td>20</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>6</td>\n",
+       "      <td>29.3</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>9,939,666.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>975</th>\n",
+       "      <td>Papu Gómez</td>\n",
+       "      <td>34</td>\n",
+       "      <td>13</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>925,333.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2099</th>\n",
+       "      <td>Rodrigo</td>\n",
+       "      <td>31</td>\n",
+       "      <td>18</td>\n",
        "      <td>FW</td>\n",
+       "      <td>10</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>8,836,333.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1012</th>\n",
+       "      <td>Vincenzo Grifo</td>\n",
+       "      <td>29</td>\n",
+       "      <td>19</td>\n",
+       "      <td>FW</td>\n",
+       "      <td>11</td>\n",
+       "      <td>38.7</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>11,537,333.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252</th>\n",
+       "      <td>Wissam Ben Yedder</td>\n",
+       "      <td>32</td>\n",
+       "      <td>19</td>\n",
+       "      <td>FW</td>\n",
+       "      <td>14</td>\n",
+       "      <td>20.7</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>7,684,500.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Player  Age  MP  Goals  Assists  CrdY  2CrdY  CrdR   Min Pos\n",
-       "1322     Tomá Koubek   30   4      0     0.00  0.00    0.0   0.0   360  GK\n",
-       "2210      Malang Sarr   24   9      0     0.00  0.50    0.0   0.0   356  DF\n",
-       "1919  Alfonso Pedraza   26  12      0     0.11  0.11    0.0   0.0   836  DF\n",
-       "2064      Karim Rekik   28  10      1     0.14  0.14    0.0   0.0   664  DF\n",
-       "583       Colin Dagba   24  12      0     0.00  0.16    0.0   0.0   560  DF\n",
-       "827    Jacopo Fazzini   19  11      0     0.00  0.74    0.0   0.0   245  MF\n",
-       "173    Cédric Bakambu   31   3      0     1.43  0.00    0.0   0.0    59  MF\n",
-       "2538      Mikel Vesga   29  20      2     0.12  0.18    0.0   0.0  1485  MF\n",
-       "1188     Daniel James   25   4      0     0.00  0.00    0.0   0.0   198  FW\n",
-       "1057   Erling Haaland   22  20     25     0.16  0.16    0.0   0.0  1636  FW\n",
-       "816     Romain Faivre   24   2      0     0.00  0.00    0.0   0.0   118  FW"
+       "                 Player  Age  MP Pos  Goals  PasTotCmp  Int  current_value\n",
+       "2254         Luigi Sepe   31  15  GK      0       24.9  0.0    2,100,000.0\n",
+       "1292         Max Kilman   25  22  DF      0       47.8  0.7   14,046,333.3\n",
+       "1060     Alexander Hack   29  16  DF      0       34.6  1.9    1,958,333.3\n",
+       "196         Melvin Bard   22  20  DF      0       42.0  1.9    4,394,166.7\n",
+       "323      Kenji-Van Boto   26   1  DF      0       23.0  1.0    2,154,611.1\n",
+       "725       Niklas Dorsch   25   4  MF      0       32.2  1.1      652,166.7\n",
+       "1181       Lee Jae-sung   30  20  MF      6       29.3  0.7    9,939,666.7\n",
+       "975          Papu Gómez   34  13  MF      0       45.5  0.5      925,333.3\n",
+       "2099            Rodrigo   31  18  FW     10       19.0  0.2    8,836,333.3\n",
+       "1012     Vincenzo Grifo   29  19  FW     11       38.7  0.6   11,537,333.3\n",
+       "252   Wissam Ben Yedder   32  19  FW     14       20.7  0.2    7,684,500.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[best.index, [\"Player\"] + to_keep_for_value_prediction]"
+    "pd.set_option('float_format', '{:,.1f}'.format)\n",
+    "df.loc[best.index, [\"Player\", \"Age\", \"MP\", \"Pos\", \"Goals\", \"PasTotCmp\", \"Int\", \"current_value\"]]"
    ]
   }
  ],
